tests/invalid/syntax/const_missing_type.fig
// Invalid: Missing type in const declaration
const MISSING_TYPE = 42
